new styles and structuring functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Grupo C
         </h2>
         <nav>
-            <h3>Integrantes:</h3>
+            <h3>Integrantes</h3>
             <ul>
                 <li>
                     <p>
@@ -53,15 +53,10 @@
             <option value="1">Subtração</option>
         </select>
 
-        <div id="input_div"></div>
-        
-        <!-- <input 
-            type="text" 
-            name="Operação" 
-            placeholder="Insira a operação" 
-            id="input"
-        > -->
-
+        <div id="input_father" class="hidden">
+            <div id="input_div"></div> 
+            <button id="btn_calculate">Calcular</button>
+        </div>
 
 
     </main>
