--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo C - Modelagem Computacional</title>
     <link rel="stylesheet" href="style.css">
-    <style></style>
+    <!-- <style></style> -->
 </head>
 <body>
     <header>
@@ -62,7 +62,7 @@
     </main>
     <footer></footer>
 
-    <script></script>    
+    <!-- <script></script>     -->
     <script src="script.js"></script>
 </body>
 </html>
