--- a/index.html
+++ b/index.html
@@ -10,41 +10,20 @@
 </head>
 <body>
     <header>
-        <h2>
-            Modelagem Computacional
-            <br/>
-            Grupo C
-        </h2>
-        <nav>
-            <h3>Integrantes</h3>
-            <ul>
-                <li>
-                    <p>
-                        André Barros
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        João Vinicius Vitral
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Vinicius Carvalho Monnerat
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Jorge
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        João Victtor
-                    </p>
-                </li>
-            </ul>
-        </nav>
+        <div class="left_side_header">
+            <a href=""><h2>Modelagem Computacional - Grupo C</h2></a>
+        </div>
+        <div class="right_side_header">
+            <nav>
+                <ul>
+                    <li>João Vinícius Vitral</li>
+                    <li>João Vinícius Vitral</li>
+                    <li>João Vinícius Vitral</li>
+                    <li>João Vinícius Vitral</li>
+                    <li>João Vinícius Vitral</li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <select name="selecao" id="select">
