--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button id="btn_calculate">Calcular</button>
         </div>
 
-
+        <div id="result_div"></div>
     </main>
     <footer></footer>
 
