--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="right_side_header">
             <nav>
                 <ul>
+                    <li>André Bastos</li>
                     <li>João Vinícius Vitral</li>
-                    <li>João Vinícius Vitral</li>
-                    <li>João Vinícius Vitral</li>
-                    <li>João Vinícius Vitral</li>
-                    <li>João Vinícius Vitral</li>
+                    <li>João Victtor</li>
+                    <li>Vinicius Monnerat</li>
+                    <li>Jorge</li>
                 </ul>
             </nav>
         </div>
