styles and more

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <div class="left_side_header">
-            <a href=""><h2>Modelagem Computacional - Grupo C</h2></a>
+        <div>
+            <a href="#"><h2>Modelagem Computacional - Grupo C</h2></a>
         </div>
-        <div class="right_side_header">
+        <div>
             <nav>
                 <ul>
                     <li>André Bastos</li>
@@ -39,7 +39,7 @@
 
         <div id="result_div"></div>
     </main>
-    <footer></footer>
+    <!-- <footer></footer> -->
 
     <!-- <script></script>     -->
     <script src="script.js"></script>
