--- a/index.html
+++ b/index.html
@@ -31,19 +31,7 @@
             <option value="0">Soma</option>
             <option value="1">Subtração</option>
         </select>
-        <select name="basenumerica" id="basen">
-            <option selected disabled>Base Numérica</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select>
-
+        <input name="basenumerica" id="basen" type="number" min="2" max="36" placeholder="0-36">
         <div id="input_father" class="hidden">
             <div id="input_div"></div> 
             <button id="btn_calculate">Calcular</button>
