new README update || html GH link || script for negative numbers

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div>
             <nav>
                 <ul>
-                    <li>André Bastos</li>
-                    <li>João Vinícius Vitral</li>
-                    <li>João Victtor</li>
-                    <li>Vinicius Monnerat</li>
-                    <li>Jorge</li>
+                    <li><a href="https://github.com/andreb308" target="_blank">André Bastos</a></li>
+                    <li><a href="https://github.com/JxVtrl" target="_blank">João Vinícius Vitral</a></li>
+                    <li><a href="https://github.com/TheVicttor" target="_blank">João Victtor</a></li>
+                    <li><a href="https://github.com/ViniciusCMB" target="_blank">Vinicius Monnerat</a></li>
+                    <li><a href="https://github.com/jorgelomeu" target="_blank">Jorge</a></li>
                 </ul>
             </nav>
         </div>
