Memória de cálculo
Resumo: foi adicionada a "memória de cálculo" e foram feitas algumas melhorias e correções de bugs.

i. a "memória de cálculo" foi adicionada  basicamente somando strings no "innerHTML" da nova variável "memoria_calculo".

ii. melhora na função de normalização: se o denominador for igual a 1, só o numerado é mostrado na resposta.

iii. otimização da função de multiplicação.

iv. correção de bug: as funções de multiplicação, divisão e normalização estavam retornando um array de strings, ao invés de um array de números; usei o "map" para resolver o problema.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         </div>
 
         <div id="result_div"></div>
+
+        <div id="memoria_calculo"></div>
     </main>
 
     <div id="ajuda" class="modal">
